# controllers/needy.go
@@ -130,6 +130,47 @@ func GetNeedyDetail(c *gin.Context) {
 	return
 }
 
+// PayForNeed godoc
+// @Summary Pay need
+// @Tags need
+// @Produce json
+// @Param id path string true "ID"
+// @Success 200 {object} gin.H
+// @Failure 400 {object} gin.H
+// @Router /v1/payment/{id} [post]
+func PayForNeed(c *gin.Context) {
+	needId := c.Param("id")
+
+	paymentForm := &PaymentForm{}
+	err := c.BindJSON(&paymentForm)
+
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"status":  http.StatusBadRequest,
+			"message": "Payment cannot be read",
+			"error":   err.Error(),
+		})
+		return
+	}
+
+	payment, err := models.PayNeed(needId, paymentForm.FullName)
+
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"status":  http.StatusBadRequest,
+			"message": "Payment error",
+			"error":   err.Error(),
+		})
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"status":  http.StatusOK,
+		"message": "Payment successful",
+		"data":    payment,
+	})
+	return
+}
+
 // AddNeed godoc
 // @Summary Add need to needy
 // @Tags needy
@@ -159,11 +200,14 @@ func AddNeed(c *gin.Context) {
 			Description: lineItem.Description,
 			Amount:      lineItem.Amount,
 			Good:        models.Good{
+				GoodId: lineItem.Good.GoodId,
+				/*
 				Name:         lineItem.Good.Name,
 				Price:        lineItem.Good.Price,
 				PhotoLink:    lineItem.Good.PhotoLink,
 				IsAvailable:  lineItem.Good.IsAvailable,
 				GoodCategory: lineItem.Good.GoodCategory,
+				 */
 			},
 		})
 	}
